--- a/app/src/main/res/layout/fragment_date.xml
+++ b/app/src/main/res/layout/fragment_date.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:spinnersShown="true"
         android:calendarViewShown="false"
+        android:scaleX="1.2"
+        android:scaleY="1.2"
         app:layout_constraintBottom_toTopOf="@+id/separator"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
