--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -7,12 +7,13 @@
     tools:context=".ui.add.PhotoFragment">
 
     <ImageView
-        android:id="@+id/photo"
+        android:id="@+id/photo_preview"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="300dp"
         android:layout_margin="50dp"
         android:contentDescription="@string/client_photo"
-        android:src="@drawable/img"
+        android:src="@drawable/ic_account_placeholder"
+        android:alpha="20"
         app:layout_constraintBottom_toTopOf="@+id/take_photo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -21,7 +22,7 @@
     <Button
         android:id="@+id/take_photo"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:layout_margin="20dp"
         android:text="@string/photo"
         app:layout_constraintBottom_toTopOf="@+id/separator"
