--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -11,9 +11,9 @@
         android:layout_width="0dp"
         android:layout_height="300dp"
         android:layout_margin="50dp"
+        android:alpha="20"
         android:contentDescription="@string/client_photo"
         android:src="@drawable/ic_account_placeholder"
-        android:alpha="20"
         app:layout_constraintBottom_toTopOf="@+id/take_photo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,41 +22,21 @@
     <Button
         android:id="@+id/take_photo"
         android:layout_width="200dp"
-        android:layout_height="80dp"
+        android:layout_height="60dp"
         android:layout_margin="20dp"
+        android:background="@drawable/bg_ripple_button"
         android:text="@string/photo"
-        app:layout_constraintBottom_toTopOf="@+id/separator"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <View
-        android:id="@+id/separator"
+    <include
+        android:id="@+id/bottom_bar"
+        layout="@layout/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/separator"
-        app:layout_constraintBottom_toTopOf="@+id/back"
+        android:layout_height="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="@string/back"
-        android:textColor="@color/purple_500"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="@string/done"
-        android:textColor="@color/purple_500"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
