--- a/app/src/main/res/layout/fragment_weight.xml
+++ b/app/src/main/res/layout/fragment_weight.xml
@@ -8,52 +8,33 @@
 
     <NumberPicker
         android:id="@+id/weight_value"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="400dp"
         android:layout_margin="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/separator"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
         app:layout_constraintEnd_toStartOf="@+id/weight_unit"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <NumberPicker
         android:id="@+id/weight_unit"
-        android:layout_width="0dp"
+        android:layout_width="120dp"
         android:layout_height="200dp"
         android:layout_margin="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/separator"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/weight_value"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
-        android:id="@+id/separator"
+    <include
+        android:id="@+id/bottom_bar"
+        layout="@layout/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="20dp"
-        android:background="@drawable/separator"
-        app:layout_constraintBottom_toTopOf="@+id/back"
+        android:layout_height="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="@string/back"
-        android:textColor="@color/purple_500"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="@string/next"
-        android:textColor="@color/purple_500"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
