--- a/app/src/main/res/layout/bottom_bar.xml
+++ b/app/src/main/res/layout/bottom_bar.xml
@@ -1,37 +1,73 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    android:layout_height="wrap_content">
 
     <View
         android:id="@+id/separator"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_gravity="center|top"
         android:layout_marginHorizontal="20dp"
-        android:background="@drawable/separator" />
+        android:background="@drawable/separator"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|left"
         android:layout_margin="20dp"
+
         android:background="@drawable/bg_ripple_button"
         android:text="@string/back"
         android:textColor="@color/white"
-        tools:ignore="RtlHardcoded" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/separator" />
+
+    <View
+        android:id="@+id/indicator_1"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:background="@drawable/dot_empty"
+        app:layout_constraintBottom_toBottomOf="@+id/back"
+        app:layout_constraintEnd_toStartOf="@+id/indicator_2"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toEndOf="@+id/back"
+        app:layout_constraintTop_toTopOf="@+id/back" />
+
+    <View
+        android:id="@+id/indicator_2"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_marginHorizontal="5dp"
+        android:background="@drawable/dot_empty"
+        app:layout_constraintBottom_toBottomOf="@+id/back"
+        app:layout_constraintEnd_toStartOf="@+id/indicator_3"
+        app:layout_constraintStart_toEndOf="@+id/indicator_1"
+        app:layout_constraintTop_toTopOf="@+id/back" />
+
+    <View
+        android:id="@+id/indicator_3"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:background="@drawable/dot_empty"
+        app:layout_constraintBottom_toBottomOf="@+id/back"
+        app:layout_constraintEnd_toStartOf="@+id/next"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/indicator_2"
+        app:layout_constraintTop_toTopOf="@+id/back" />
 
     <Button
         android:id="@+id/next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|right"
         android:layout_margin="20dp"
         android:background="@drawable/bg_ripple_button"
         android:text="@string/next"
         android:textColor="@color/white"
-        tools:ignore="RtlHardcoded" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/separator" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
