--- a/app/src/main/res/layout/fragment_clients_list.xml
+++ b/app/src/main/res/layout/fragment_clients_list.xml
@@ -36,13 +36,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list" />
 
-    <TextView
+    <Button
         android:id="@+id/add_client"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:paddingHorizontal="10dp"
+        android:background="@drawable/bg_ripple_button"
         android:text="@string/add_client"
-        android:textColor="@color/purple_500"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
