--- a/app/src/main/res/layout/fragment_photo.xml
+++ b/app/src/main/res/layout/fragment_photo.xml
@@ -26,6 +26,7 @@
         android:layout_margin="20dp"
         android:background="@drawable/bg_ripple_button"
         android:text="@string/photo"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/bottom_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -34,7 +35,7 @@
         android:id="@+id/bottom_bar"
         layout="@layout/bottom_bar"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="90dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
