--- a/app/src/main/res/layout/rv_item_client.xml
+++ b/app/src/main/res/layout/rv_item_client.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_margin="10dp"
-    android:layout_height="150dp">
+    android:layout_height="160dp"
+    android:layout_margin="10dp">
 
     <ImageView
         android:id="@+id/image"
@@ -59,14 +59,15 @@
         app:layout_constraintTop_toBottomOf="@+id/tv_birth_title"
         tool:text="May 8, 1999" />
 
-    <TextView
+    <Button
         android:id="@+id/tv_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="20dp"
+        android:layout_marginVertical="10dp"
         android:layout_marginStart="10dp"
+        android:background="@drawable/bg_ripple_button"
         android:text="@string/edit"
-        android:textColor="@color/teal_700"
+        android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toBottomOf="@+id/tv_birth_value" />
 
