--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="black_30">#4D000000</color>
+    <color name="black_10">#1A000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="rippleColor">#FF03DAC5</color>
     <color name="rippleBgColor">#FF018786</color>
